--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="main">
-        <img src="https://assets.stickpng.com/images/5842a770a6515b1e0ad75afe.png" alt="SpaceX-Logo" id="logo">
+        <img src="spacex-logo.png" alt="SpaceX-Logo" id="logo">
         <h1 id="heading">Join the <span class="underline">exploration</span></h1>
         <button class="btn">Apply!</button>
     </div>
