--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="main">
-        <img src="spacex-logo.png" alt="SpaceX-Logo" id="logo">
-        <h1 id="heading">Join the <span class="underline">exploration</span></h1>
+    <div class="main">
+        <img src="spacex-logo.png" alt="SpaceX-Logo" class="logo">
+        <h1 class="heading">Join the <span class="underline">exploration</span></h1>
         <button class="btn">Apply!</button>
     </div>
-    <h3>Terms and conditions apply</h3>
+    <div class="bottom">
+        <h3>Terms and conditions apply</h3>
+    </div>    
 </body>
 </html>
